[project]
name = "sesame-host-tests"
version = "0.0.0"
description = "Host-based module tests for Sesame firmware"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0",
    "protobuf>=4.0",
    "requests>=2.31",
    "paho-mqtt>=1.6,<3",
]

[tool.pytest.ini_options]
testpaths = ["httpd", "mqtt", "ota", "syslog"]
addopts = "-ra"
